# app-launcher

./: LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.json
src/: App.vue  main.ts  quasar-user-options.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: AppHeader.vue  AppItem.vue  SettingsModal.vue
src/types/: App.ts
